--- a/donate-ui/src/global.scss
+++ b/donate-ui/src/global.scss
@@ -40,7 +40,9 @@
 @import "./app/pages/browse-causes/topic-list/topic-list.component.scss";
 @import "./app/pages/home/home.theme";
 @import "./app/pages/user-preferences/user-preferences.theme";
-@import './app/pages/payment/bank-account/bank-account.theme';
+@import "./app/pages/payment/bank-account/bank-account.theme";
+@import "./app/pages/login/login.theme";
+@import "./app/pages/register/register.theme";
 
 :root {
   --ion-background-color: white !important;
@@ -90,6 +92,8 @@ ion-header::after {
   @include app-home($theme);
   @include app-user-preferences($theme);
   @include app-bank-account($theme);
+  @include app-login($theme);
+  @include app-register($theme);
 
   @include app-browse-causes($theme);
   @include app-topic-list($theme);
