--- a/donate-ui/src/app/pages/add-donation/topic-card/_topic-card.theme.scss
+++ b/donate-ui/src/app/pages/add-donation/topic-card/_topic-card.theme.scss
@@ -6,9 +6,13 @@
       text-align: start;
       cursor: pointer;
     }
+    .topic {
+      margin: $uxg-spacing-2;
+      font-weight: 500;
+    }
 
     .charity-card {
-      margin: 0;
+      margin: 1px;
     }
 
     .title {
