--- a/donate-ui/src/app/pages/charity-details/_charity-details.theme.scss
+++ b/donate-ui/src/app/pages/charity-details/_charity-details.theme.scss
@@ -17,6 +17,10 @@
     font-size: 14px;
   }
 
+  .section-title {
+    font-weight: 500 !important;
+  }
+
   .effort-range {
     padding-top: 0;
     padding-bottom: 0;
