--- a/donate-ui/src/app/pages/login/login.page.html
+++ b/donate-ui/src/app/pages/login/login.page.html
@@ -26,6 +26,7 @@
         matInput
         placeholder="password"
         autocomplete="off"
+        type="password"
         [(ngModel)]="credentials.password"
       />
     </mat-form-field>
