--- a/donate-ui/src/app/pages/register/register.page.html
+++ b/donate-ui/src/app/pages/register/register.page.html
@@ -44,6 +44,7 @@
         matInput
         placeholder="password"
         autocomplete="off"
+        type="password"
         [(ngModel)]="credentials.password"
       />
     </mat-form-field>
