--- a/donate-ui/src/app/pages/add-donation/topic-card/topic-card.component.html
+++ b/donate-ui/src/app/pages/add-donation/topic-card/topic-card.component.html
@@ -12,13 +12,13 @@
             class="charity-image"
           />
         </div>
-        <ion-card-content>
+        <div class="topic-content-container">
           <p class="title">{{ charity.name }}</p>
           <p class="description">
             {{ charity.description }}
           </p>
           <p class="read-more"><a [href]="charity.websiteUrl">Read more</a></p>
-        </ion-card-content>
+        </div>
       </ion-card>
     </ion-slide>
   </ion-slides>
