--- a/donate-ui/src/app/pages/user-profile/notifications/notifications.component.html
+++ b/donate-ui/src/app/pages/user-profile/notifications/notifications.component.html
@@ -3,13 +3,13 @@
     <ion-buttons slot="start" (click)="saveChanges()">
       <ion-back-button text="" icon="chevron-back"></ion-back-button>
     </ion-buttons>
-    <ion-title>Notifications</ion-title>
+    <ion-title>notifications</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
     <ion-item-group>
       <ion-item-divider>
-        <ion-label>Push Notifications</ion-label>
+        <ion-label>push notifications</ion-label>
       </ion-item-divider>
       <ion-list>
         <ion-item lines="none" detail="false">
@@ -25,7 +25,7 @@
     </ion-item-group>
     <ion-item-group>
       <ion-item-divider>
-        <ion-label>Other Notification Types</ion-label>
+        <ion-label>other notification types</ion-label>
       </ion-item-divider>
       <ion-list>
         <ion-item lines="none" detail="false">
