--- a/donate-ui/src/theme/_base.scss
+++ b/donate-ui/src/theme/_base.scss
@@ -1,3 +1,15 @@
 a {
-    cursor: pointer;
+  cursor: pointer;
+}
+
+* {
+  font-family: "Typo Round", sans-serif;
+  font-family: "Typo Round Regular Demo", sans-serif;
+  font-family: "Typo Round Thin Demo", sans-serif;
+  font-family: "Typo Round Light Demo", sans-serif;
+  font-family: "Typo Round Bold Demo", sans-serif;
+}
+
+ion-label {
+  font-family: "Typo Round Regular Demo", sans-serif !important;
 }
