--- a/donate-ui/src/app/pages/charity-details/_charity-details.theme.scss
+++ b/donate-ui/src/app/pages/charity-details/_charity-details.theme.scss
@@ -1,6 +1,7 @@
 @mixin app-charity-details($theme) {
   $primary: map-get($theme, primary);
-  .charity-details {
+  .charity-details,
+  .charity-updates {
     padding: $uxg-spacing-3;
   }
 
@@ -11,6 +12,7 @@
 
   .title {
     margin-top: 0;
+    margin-bottom: 0 !important;
   }
 
   .subtitle {
@@ -18,28 +20,44 @@
   }
 
   .section-title {
-    font-weight: 500 !important;
+    font-size: 16px;
+    font-weight: 600 !important;
+    margin-bottom: $uxg-spacing-2;
+    margin-top: $uxg-spacing-2;
   }
 
-  .effort-range {
-    padding-top: 0;
-    padding-bottom: 0;
-  }
+  .charity-effort {
+    background: url("../../../assets/svg/currenteffort.svg");
+    background-repeat: no-repeat;
+    padding: $uxg-spacing-2 $uxg-spacing-3 0;
+    background-size: cover;
+    height: 160px;
 
-  .target-value {
-    margin: 0;
-    text-align: right;
-    padding-right: $uxg-spacing-2;
-    margin-top: -10px !important;
-  }
+    .effort-subtitle {
+      font-size: 12px;
+      margin-bottom: 0;
+    }
 
-  .current-value {
-    margin: 0;
-    text-align: right;
-    padding-right: $uxg-spacing-2;
-    margin-bottom: -10px !important;
-    font-size: 18px;
-    font-weight: 600;
+    .effort-range {
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+
+    .target-value {
+      margin: 0;
+      text-align: right;
+      padding-right: $uxg-spacing-2;
+      margin-top: -15px !important;
+    }
+
+    .current-value {
+      margin: 0;
+      text-align: right;
+      padding-right: $uxg-spacing-2;
+      margin-bottom: -15px !important;
+      font-size: 18px;
+      font-weight: 600;
+    }
   }
 
   .update-container {
