--- a/donate-ui/src/app/pages/user-preferences/_user-preferences.theme.scss
+++ b/donate-ui/src/app/pages/user-preferences/_user-preferences.theme.scss
@@ -12,7 +12,6 @@
 
     .slide-title {
       padding: 0 $uxg-spacing-2;
-      margin-bottom: 0;
       text-align: start;
     }
 
@@ -35,8 +34,9 @@
         max-height: 100px;
       }
       .topic-title {
+        font-size: 12px;
         white-space: nowrap;
-        margin-top: -15px;
+        margin-top: -18px;
       }
       &.selected {
         border: 4px solid mat-color($primary, default);
@@ -55,7 +55,7 @@
     }
 
     .subtitle {
-      white-space: pre-wrap;
+      white-space: pre-line;
       margin-top: $uxg-spacing-2;
     }
   }
