--- a/donate-ui/src/app/pages/user-preferences/user-preferences.page.html
+++ b/donate-ui/src/app/pages/user-preferences/user-preferences.page.html
@@ -8,7 +8,7 @@
     (ionSlideDidChange)="updateSlideIndex()"
   >
     <ion-slide fxLayout="column" fxLayoutAlign="start center">
-      <h2 class="slide-title">first, tell us what matters most to you</h2>
+      <h1 class="slide-title">first, tell us what matters most to you</h1>
 
       <mat-form-field appearance="fill" class="user-preferences-search">
         <mat-icon color="accent" matPrefix>search</mat-icon>
@@ -35,11 +35,12 @@
       </div>
     </ion-slide>
     <ion-slide fxLayout="column" fxLayoutAlign="start center">
-      <h2 class="slide-title">next, set some preferences</h2>
+      <h1 class="slide-title">next, set some preferences</h1>
       <ion-list>
         <ion-item lines="none">
           <ion-label
-            >Go Local<br />
+            >Go Local
+            <br />
             <p class="subtitle">
               Prioritize charities and causes that are close to me
             </p>
@@ -71,7 +72,7 @@
       </ion-list>
     </ion-slide>
     <ion-slide fxLayout="column" fxLayoutAlign="start center">
-      <h2 class="slide-title">Choose your payment method</h2>
+      <h2 class="slide-title">choose your payment method</h2>
       <div
         class="payment-card"
         *ngFor="let method of paymentMethod"
