routing with data

--- a/donate-ui/src/app/pages/browse-causes/browse-causes.page.html
+++ b/donate-ui/src/app/pages/browse-causes/browse-causes.page.html
@@ -21,7 +21,7 @@
         fxFlex="40"
         *ngFor="let topic of topics"
         class="browse-card"
-        (click)="openTopicList(topic)"
+        (click)="goToTopicList(topic)"
       >
         <ion-card-content>
           <img
