--- a/donate-ui/src/app/pages/charity-details/charity-details.page.html
+++ b/donate-ui/src/app/pages/charity-details/charity-details.page.html
@@ -2,7 +2,8 @@
   <ion-buttons slot="start" class="back-btn-container">
     <ion-back-button
       class="back-btn"
-      defaultHref="tabs/register-donation"
+      defaultHref=""
+      (click)="goBack()"
       text=""
     ></ion-back-button>
   </ion-buttons>
