--- a/donate-ui/src/app/pages/user-profile/user-profile.page.scss
+++ b/donate-ui/src/app/pages/user-profile/user-profile.page.scss
@@ -1,10 +1,15 @@
-.user-profile-content {
-    height: 100%;
-    ion-avatar {
-        margin-top: 5rem;
+@mixin app-user-profile-page($theme) {
+    .user-profile-header {
+        height: 50%;
+        ion-avatar {
+            width: 100px;
+            height: 100px;
+            margin-top: 2rem;
+            @include mat-elevation(12, white, 1);
+        }
+        a {
+            text-decoration: none;
+            color: black;
+        }
     }
-    a {
-        text-decoration: none;
-    }
-
 }
