--- a/donate-ui/src/app/pages/browse-causes/topic-list/_topic-list.theme.scss
+++ b/donate-ui/src/app/pages/browse-causes/topic-list/_topic-list.theme.scss
@@ -19,7 +19,7 @@
     }
 
     .image-container {
-      height: 100px;
+      height: auto;
       .charity-image {
         width: 100%;
         height: 100%;
