--- a/donate-ui/src/app/pages/add-donation/topic-card/_topic-card.theme.scss
+++ b/donate-ui/src/app/pages/add-donation/topic-card/_topic-card.theme.scss
@@ -38,7 +38,7 @@
     }
 
     .topic-image-container {
-      height: 100px;
+      height: auto;
       .charity-image {
         width: 100%;
         height: 100%;
