--- a/donate-ui/src/app/pages/donation-methods/incognito/incognito.component.html
+++ b/donate-ui/src/app/pages/donation-methods/incognito/incognito.component.html
@@ -32,7 +32,7 @@
       />
     </mat-form-field>
 
-    <h3 class="title">to {{ charity.name }} every time</h3>
+    <h3 class="title">to {{ charity?.name }} every time</h3>
     <mat-form-field appearance="fill" dense class="incognito-fields">
       <mat-label>select option</mat-label>
       <mat-select [(ngModel)]="when">
