--- a/donate-ui/src/theme/_base.scss
+++ b/donate-ui/src/theme/_base.scss
@@ -5,9 +5,9 @@ a {
 * {
   font-family: "Typo Round", sans-serif;
   font-family: "Typo Round Regular Demo", sans-serif;
-  font-family: "Typo Round Thin Demo", sans-serif;
-  font-family: "Typo Round Light Demo", sans-serif;
-  font-family: "Typo Round Bold Demo", sans-serif;
+  // font-family: "Typo Round Thin Demo", sans-serif;
+  // font-family: "Typo Round Light Demo", sans-serif;
+  // font-family: "Typo Round Bold Demo", sans-serif;
 }
 
 ion-label {
